# docs/swagger.yaml
@@ -220,8 +220,12 @@ paths:
           description: 로그인에 성공했습니다.
           schema:
             type: string
-        "400":
-          description: 이메일 형식이 올바르지 않습니다.
+        "401":
+          description: 비밀번호가 올바르지 않습니다.
+          schema:
+            type: string
+        "500":
+          description: 리프레시 토큰 저장에 실패했습니다.
           schema:
             type: string
       summary: SignIn
@@ -231,7 +235,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: SingUp
+      description: SignUp
       parameters:
       - description: 이메일과 비밀번호
         in: body
@@ -247,7 +251,11 @@ paths:
           schema:
             type: string
         "400":
-          description: 이메일 형식이 올바르지 않습니다.
+          description: 비밀번호 암호화에 실패했습니다.
+          schema:
+            type: string
+        "500":
+          description: 회원가입에 실패했습니다.
           schema:
             type: string
       summary: SignUp
